fixing page components and alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
 body {
+  scroll-behavior: smooth;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1,
+h2,
+p,
+ul,
+li {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-decoration: none;
+  list-style: none;
+  /* padding: 2px; */
+  width: 100%;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+
+
+.content {
+  background-color: transparent;
+  padding: 20px;
+  height: auto;
+  color: #434445;
+}
+
+.comtent li {
+  margin-bottom: 10px;
+}
+
+.logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-decoration: none;
+  padding: 20px;
+  font-weight: bold;
+  background-color: #6d6dc8;
+  color: white;
+  font-size: 40px;
+}
+
+section {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  float: center;
+  text-align: center;
 }
